# msbed

./: .gitignore  CLAUDE.md  PHASE2_SPEC.md  README.md  pyproject.toml
.claude/: settings.local.json
apps/phase2_simulation/: README.md  isotherms.py  ldf_kinetics.py  run_breakthrough.py  run_cycle.py  run_cycle_repeated.py  run_heating_diag.py  run_heating_preflight.py  run_sensitivity.py
apps/phase2_simulation/adsorption_1d/: __init__.py  boundary.py  config.py  grid.py  jacobian.py  rhs.py  solver.py  state.py  state_transform.py
apps/phase2_simulation/tests/: test_cycle_repeated.py  test_isotherms.py  test_ldf_kinetics.py  test_run_breakthrough.py  test_sensitivity.py
apps/phase2_simulation/tests/test_adsorption_1d/: test_boundary.py  test_grid.py  test_jacobian.py  test_rhs.py  test_solver.py  test_state.py  test_state_transform.py
apps/phase3_equipment/: README.md
apps/phase4_pid/: README.md
apps/phase6_test_analysis/: README.md
config/: adsorbent_properties.yaml  dbd_locked.yaml
docs/: DBD_v1.0.md  design_decisions.md
docs/references/: README.md
outputs/phase1/: MS_BED_Phase1_Mass_Energy_Balance_v1.0.xlsx
outputs/phase2/: README.md
outputs/phase2/breakthrough_curves/: design_case_breakthrough.csv  design_case_summary.json
outputs/phase2/cycle/: cycle_00_summary.json
outputs/phase2/cycle_repeated/: stabilization_report.json
outputs/phase2/diag/: max_step_sweep.json  profile_max_step_0.01.json
outputs/phase2/preflight/: heating_preflight.json
